# skills

./: AGENTS.md  COMMIT_GUIDE.md  README.md  TEMPLATE.md
conventional-commits/: SKILL.md
conventional-commits/assets/: CHECKLIST.md  TEMPLATES.md
fastapi-clean/: SKILL.md
fastapi-clean/assets/: Dockerfile  config.py  dependencies.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  init_project.py  main.py  pyproject.toml  requirements.txt  router_health.py  routers_init.py  schemas_health.py  service_health.py
scripts/: README.md  sync-branches.sh
